@@ -12,6 +12,7 @@ Bug Fixes:
   - Do not encode password in communication with CCS/DDS (ORCJAVA-495)
   - Never send md5 encoded password to backend (ORCJAVA-503)
   - Remove warnings when compiling under JDK7/8 (ORCJAVA-499)
+  - Fixed: Re-connection issues with AMX protocol (ORCJAVA-456)
 
 Controller Pro 1.3.0
 ====================
